# retention

./: .gitignore  404.html  Makefile  README.md  index.html  objects.inv  pyproject.toml  setup.py
.github/workflows/: build-and-test.yml
benchmarking/: index.html
contributing/: index.html
contributing/release/: index.html
csrc/power_attention/: api.cpp
csrc/power_attention/src/: state.h
csrc/power_attention/src/mosaic/: ABC_utils.cuh  CMakeLists.txt  README.md  main.cu  mma_mosaic.cuh  mosaic_binding.cu  non_decreasing_seq.cuh  sympow_mosaic.cuh  tile_mosaic.cuh  tprod.cuh  tprod_mosaic.cuh  utilities.cuh
csrc/power_attention/src/mosaic/tests/: mma_mosaic_test.cu  sympow_mosaic_test.cu  tile_mosaic_test.cu  tprod_mosaic_test.cu  tprod_test.cu  utils_test.cu
csrc/power_attention/src/mosaic/tutorials/: 0_simple_tprod_kernel.cu
deploy/: README.md  generate.py
docs/: index.md
installation/: index.html
perf/: README.md  _checks.py  _inspect.py  _precision.py  _timing.py  benchmark.py  plot_reports.py
perf/baselines/: sdpa.py
perf/benchmarks/: README.md  REAME.md  benchmarks.py  discumsum.py  power_full.py  query_state.py  rungroups.py  runner.py  runs.py
perf/tests/: common_tests.py  power_full.py  test_list.py
perf/tests/attention/: impl.py  impl_triton.py
perf/tests/query_state/: impl.py
perf/tests/update_state/: impl.py
plots/: kernel_speed_plot.py  perfplot.py
power_attention/: __init__.py  _utils.py  kernelgen.py  power_full.py
power_attention/_attention/: __init__.py  impl.py  impl_triton.py  reference.py  triton.py
power_attention/_discumsum/: triton.py
power_attention/_expansion/: impl_triton.py
power_attention/_expansion/_rendered/: _expand_kernel_dispatcher.py
power_attention/_query_state/: __init__.py  create_inputs.py  impl.py  impl_triton.py  reference.py  triton.py  vidrial.py
power_attention/_query_state/_rendered/: _query_state_bwd_dQ_dispatcher.py  _query_state_bwd_dS_dispatcher.py  _query_state_fwd_dispatcher.py
power_attention/_update_state/: __init__.py  expansion.py  impl.py  impl_triton.py  triton.py  vidrial.py
power_attention/_update_state/_rendered/: _update_state_bwd_dispatcher.py  _update_state_fwd_dispatcher.py
quickstart/: index.html
reference/api/: index.html
reports/: 202501180037_fakehash.yaml  202501200037_fakehash2.yaml  202501212226_7d658a9.yaml
retention/: power_retention_maker.py
retention/_attention/: triton.py
train/: model.py  train.py
training/: model.py  train.py
